[gd_scene load_steps=21 format=2]

[ext_resource path="res://DeflectorResources/Deflector.gd" type="Script" id=1]
[ext_resource path="res://DeflectorResources/reddeflector2.png" type="Texture" id=2]
[ext_resource path="res://DeflectorResources/bluedeflector2.png" type="Texture" id=3]
[ext_resource path="res://DeflectorResources/reddeflector3.png" type="Texture" id=4]
[ext_resource path="res://DeflectorResources/bluedeflector3.png" type="Texture" id=5]
[ext_resource path="res://EffectsResources/ClickBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://EffectsResources/SwapClickBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://EffectsResources/RotationArrows.tscn" type="PackedScene" id=8]
[ext_resource path="res://EffectsResources/SwapClickBox.gd" type="Script" id=9]
[ext_resource path="res://DeflectorResources/bluedeflector4.png" type="Texture" id=10]
[ext_resource path="res://DeflectorResources/reddeflector4.png" type="Texture" id=11]
[ext_resource path="res://DeflectorResources/bluedeflector1.png" type="Texture" id=12]
[ext_resource path="res://DeflectorResources/reddeflector1.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.26504, 9.84557 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.1567, 1.82773 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.46686, 11.2482 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.1798, 12.5234 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1.52844, 1.96557 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.91527, 14.3796 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6.70077, 12.1362 )

[node name="Deflector" type="Node2D"]
script = ExtResource( 1 )

[node name="Offset" type="Node2D" parent="."]
position = Vector2( -1.869, -2.84 )
scale = Vector2( 0.3, 0.3 )

[node name="UpLeft" type="Node2D" parent="Offset"]
visible = false

[node name="BlueDeflector" type="Sprite" parent="Offset/UpLeft"]
position = Vector2( -1.062, -4.007 )
texture = ExtResource( 10 )

[node name="RedDeflector" type="Sprite" parent="Offset/UpLeft"]
position = Vector2( 8.954, -4.084 )
texture = ExtResource( 11 )

[node name="ReflectBox" type="Area2D" parent="Offset/UpLeft"]
position = Vector2( 9.30208, -8.27728 )
rotation = 0.785398
collision_layer = 2
collision_mask = 0

[node name="ReflectBox" type="CollisionShape2D" parent="Offset/UpLeft/ReflectBox"]
position = Vector2( 5.82921, 14.6701 )
shape = SubResource( 4 )
disabled = true

[node name="UpRight" type="Node2D" parent="Offset"]
visible = false

[node name="BlueDeflector" type="Sprite" parent="Offset/UpRight"]
position = Vector2( 8.937, -4.082 )
texture = ExtResource( 5 )

[node name="RedDeflector" type="Sprite" parent="Offset/UpRight"]
position = Vector2( 8.935, -4.024 )
texture = ExtResource( 4 )

[node name="ReflectBox" type="Area2D" parent="Offset/UpRight"]
position = Vector2( 6.23, 9.46667 )
rotation = 0.785398
scale = Vector2( 3.33333, 3.33333 )
collision_layer = 2
collision_mask = 0

[node name="ReflectBox" type="CollisionShape2D" parent="Offset/UpRight/ReflectBox"]
position = Vector2( -0.23799, -1.59551 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 2 )
disabled = true

[node name="DownLeft" type="Node2D" parent="Offset"]
visible = false

[node name="BlueDeflector" type="Sprite" parent="Offset/DownLeft"]
position = Vector2( -5.121, 0 )
texture = ExtResource( 12 )

[node name="RedDeflector" type="Sprite" parent="Offset/DownLeft"]
position = Vector2( -5.137, 0 )
texture = ExtResource( 13 )

[node name="ReflectBox" type="Area2D" parent="Offset/DownLeft"]
position = Vector2( 3.7985, -7.98236 )
rotation = -0.785398
collision_layer = 2
collision_mask = 0

[node name="ReflectBox" type="CollisionShape2D" parent="Offset/DownLeft/ReflectBox"]
position = Vector2( -14.4077, 13.8011 )
shape = SubResource( 3 )
disabled = true

[node name="DownRight" type="Node2D" parent="Offset"]

[node name="BlueDeflector" type="Sprite" parent="Offset/DownRight"]
position = Vector2( -7.142, 0 )
texture = ExtResource( 3 )

[node name="RedDeflector" type="Sprite" parent="Offset/DownRight"]
position = Vector2( -13.086, 0 )
texture = ExtResource( 2 )

[node name="ReflectBox" type="Area2D" parent="Offset/DownRight"]
position = Vector2( 3.69175, 4.14492 )
rotation = 0.785398
collision_layer = 2
collision_mask = 0

[node name="ReflectBox" type="CollisionShape2D" parent="Offset/DownRight/ReflectBox"]
position = Vector2( 9.81014, 1.76234 )
shape = SubResource( 1 )
disabled = true

[node name="DeathBox" type="Area2D" parent="Offset"]
position = Vector2( 6.41646, -10.768 )
collision_layer = 2
collision_mask = 0

[node name="deathBox" type="CollisionShape2D" parent="Offset/DeathBox"]
position = Vector2( 0.0174681, 20.0185 )
shape = SubResource( 5 )

[node name="ClickBox" parent="." instance=ExtResource( 6 )]
position = Vector2( -1.85832, -3.47116 )
collision_mask = 16

[node name="ClickBox" parent="ClickBox" index="0"]
visible = false
position = Vector2( 1.7812, -2.82164 )
shape = SubResource( 6 )

[node name="selectSprite" parent="ClickBox" index="1"]
visible = false

[node name="SwapClickBox" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 2.37494, -2.17702 )
scale = Vector2( 1.2, 1.2 )
script = ExtResource( 9 )

[node name="SwappableSprite" parent="SwapClickBox" index="0"]
position = Vector2( -1.61728, -3.14338 )
scale = Vector2( 1, 1.02209 )

[node name="SwapClickBox" parent="SwapClickBox" index="1"]
position = Vector2( -2.10361, -3.98706 )
shape = SubResource( 7 )

[node name="RotationArrows" parent="." instance=ExtResource( 8 )]
position = Vector2( -0.278557, 0.32583 )
scale = Vector2( 0.7, 0.7 )
[connection signal="area_entered" from="Offset/UpLeft/ReflectBox" to="." method="_on_ReflectBox_area_entered"]
[connection signal="area_entered" from="Offset/UpRight/ReflectBox" to="." method="_on_ReflectBox_area_entered"]
[connection signal="area_entered" from="Offset/DownLeft/ReflectBox" to="." method="_on_ReflectBox_area_entered"]
[connection signal="area_entered" from="Offset/DownRight/ReflectBox" to="." method="_on_ReflectBox_area_entered"]
[connection signal="area_entered" from="Offset/DeathBox" to="." method="_on_DeathBox_area_entered"]
[connection signal="input_event" from="ClickBox" to="." method="_on_ClickBox_input_event"]
[connection signal="mouse_entered" from="SwapClickBox" to="SwapClickBox" method="_on_SwapClickBox_mouse_entered"]
[connection signal="mouse_exited" from="SwapClickBox" to="SwapClickBox" method="_on_SwapClickBox_mouse_exited"]
[connection signal="swap_clicked" from="SwapClickBox" to="." method="_on_SwapClickBox_swap_clicked"]

[editable path="ClickBox"]

[editable path="SwapClickBox"]
